fix: tested solution to cutoff issue

--- a/ui-components/src/blocks/MediaCard.scss
+++ b/ui-components/src/blocks/MediaCard.scss
@@ -1,4 +1,5 @@
 .media-card {
+  --header-height: var(--bloom-s24);
   --title-color: var(--bloom-color-primary-dark);
   --title-font-size: var(--bloom-font-size-base);
   --title-font-family: var(--bloom-font-sans);
@@ -15,18 +16,18 @@
 }
 
 .media-card__header {
-  padding-top: var(--card-padding);
-  padding-bottom: var(--card-padding);
+  height: var(--header-height);
   border-top-right-radius: calc(var(--card-border-rounded) - var(--bloom-border-1));
   border-top-left-radius: calc(var(--card-border-rounded) - var(--bloom-border-1));
   background-color: var(--title-color);
-  display: flex;
-  justify-content: center;
   cursor: pointer;
-}
-
-.media-card__icon-container {
-  height: fit-content;
+  position: relative;
+  svg {
+    position: absolute;
+    // Explicit values since reflective of icon size
+    top: calc(50% - 1.5rem);
+    left: calc(50% - 1.5rem);
+  }
 }
 
 .media-card__body {
